c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/extra_credit/union_member_storage_class.c
union y {
    // union member cannot have storage class
    static int a;
};